--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -2515,22 +2515,19 @@ main .card-links.card-links-compact a, .content-container .card-links.card-links
 }
 
 .icon-watch:before {
-  content: "Watch Video";
-  -webkit-transform: rotate(0);
-          transform: rotate(0);
+  content: " ";
   background-image: url(../../resources/img/icons/play-icon.svg);
   background-position: left;
   margin: 0 auto;
   background-repeat: no-repeat;
-  height: 1rem;
-  width: 1rem;
+  height: 30px;
+  width: 30px;
   background-size: contain;
   border-right: 0;
   border-left: 0;
   border-top: 0;
   border-bottom: 0;
-  transform: rotate(0);
-  padding-left: 2rem;
+  display: inline-block;
 }
 
 .more-arrow:after {
@@ -4731,18 +4728,19 @@ ul.list-unstyled li:before, ol.list-unstyled li:before, main .card-links li:befo
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background: #bada55;
+  position: relative;
+  height: 300px;
 }
 
 .video-container .video-lightbox img, .video-container .video-lightbox .btn {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
 }
 
 .video-container .video-lightbox .btn {
   position: absolute;
-  z-index: 1;
-  border: 0;
+  z-index: 4;
 }
 
 .video-container .video-lightbox img {
@@ -4753,6 +4751,20 @@ ul.list-unstyled li:before, ol.list-unstyled li:before, main .card-links li:befo
   padding: 0 10px 10px 0;
   margin-bottom: 0.70625rem;
   width: 100%;
+  z-index: 3;
+}
+
+.video-container .video-lightbox .icon-watch {
+  padding-left: 58px;
+}
+
+.video-container .video-lightbox .icon-watch:before {
+  border: 0;
+  padding-left: 0;
+  margin-right: 1rem;
+  position: absolute;
+  top: 20%;
+  left: 20px;
 }
 
 .video-container .card-title {
